Update download links in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <!-- لینک فایل‌ها: اینجا فقط اسم فایل‌هات مهمه -->
       <div class="dl-grid">
-        <a class="dl-item" href="./Clean-IPs-2026-01-26.txt" download>
+        <a class="dl-item" href="./Clean-IPs.txt" download>
           <div class="dl-emoji">✅</div>
           <div class="dl-body">
             <div class="dl-title" id="t_dl1">Clean IPs (Today)</div>
@@ -83,7 +83,7 @@
           <div class="dl-arrow">↓</div>
         </a>
 
-        <a class="dl-item" href="./V2ray-Config-2026-01-26-Small.txt" download>
+        <a class="dl-item" href="./V2ray-Config-Small.txt" download>
           <div class="dl-emoji">🚀</div>
           <div class="dl-body">
             <div class="dl-title" id="t_dl2">Fast (Small)</div>
@@ -92,7 +92,7 @@
           <div class="dl-arrow">↓</div>
         </a>
 
-        <a class="dl-item" href="./V2ray-Config-Premium-2026-01-26-Full.txt" download>
+        <a class="dl-item" href="./V2ray-Config-Full.txt" download>
           <div class="dl-emoji">⭐</div>
           <div class="dl-body">
             <div class="dl-title" id="t_dl3">Premium (Full)</div>
@@ -101,7 +101,7 @@
           <div class="dl-arrow">↓</div>
         </a>
 
-        <a class="dl-item" href="./V2ray-Config-Ultimate-2026-01-26-All.txt" download>
+        <a class="dl-item" href="./V2ray-Config-All.txt" download>
           <div class="dl-emoji">🔥</div>
           <div class="dl-body">
             <div class="dl-title" id="t_dl4">Ultimate (All)</div>
