--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- Download -->
     <section class="section" id="download">
       <div class="section-head">
-        <h2 class="section-title" id="t_d_title">دانلودهای خوشگل 🍓</h2>
+        <h2 class="section-title" id="t_d_title">بخش دانلود 👉🏻👈🏻</h2>
         <p class="section-desc" id="t_d_desc">روی کارت‌ها بزن تا دانلود شروع بشه (لینک‌ها relative هستن).</p>
       </div>
 
@@ -235,7 +235,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-left">
-        <div class="footer-badge">🎀</div>
+        <div class="footer-badge">👤</div>
         <div>
           <div class="footer-title" id="t_ft">V2Ray Clean Hub</div>
           <div class="footer-sub" id="t_fs">Made cute • Made simple • Made daily</div>
@@ -243,7 +243,7 @@
       </div>
 
       <div class="footer-right">
-        <a class="f-link" href="./README.md">README</a>
+        <a class="f-link" href="https://github.com/idtheo/V2Ray-CleanIPs-Servers">README</a>
         <span class="sep">•</span>
         <a class="f-link" href="./LICENSE">MIT</a>
         <span class="sep">•</span>
@@ -257,7 +257,7 @@
     (function hearts(){
       const holder = document.querySelector(".hearts");
       if(!holder) return;
-      const icons = ["💗","💖","💕","💘","🌸","✨","🎀","🧁"];
+      const icons = ["💗","🪼","💕","🧜🏻‍♀️","🌸","✨","🩵","🫧"];
       const count = 18;
       for(let i=0;i<count;i++){
         const s = document.createElement("span");
@@ -288,7 +288,7 @@
       b2t:"قانون کیوت ✨",
       b2:"چندتا کانفیگ رو تست کن و بهترین Ping/Speed رو نگه دار 😺",
       last:"آخرین آپدیت:",
-      d_title:"دانلودهای خوشگل 🍓",
+      d_title:"بخش دانلود 👉🏻👈🏻",
       d_desc:"روی کارت‌ها بزن تا دانلود شروع بشه (لینک‌ها relative هستن).",
       dl1:"Clean IPs (Today)", dl1s:"لیست IPهای تمیز", c1:"پیشنهادی",
       dl2:"Fast (Small)", dl2s:"سبک و سریع برای تست", c2:"سریع",
@@ -310,7 +310,7 @@
       q3:"این صفحه بهتره یا README؟",
       a3:"این صفحه برای تجربه‌ی خوشگل و دانلود راحت؛ README برای توضیحات و لینک‌ها.",
       ft:"V2Ray Clean Hub",
-      fs:"کیوت ساخته شده • ساده ساخته شده • روزانه ساخته شده",
+      fs:"Made by idtheo • @usewuc on X • Updated daily",
       back:"برگشت به دانلودها",
       btn:"English"
     };
