--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       q3:"این صفحه بهتره یا README؟",
       a3:"این صفحه برای تجربه‌ی خوشگل و دانلود راحت؛ README برای توضیحات و لینک‌ها.",
       ft:"V2Ray Clean Hub",
-      fs:"Made by idtheo • @usewuc on X • Updated daily",
+      fs: 'Made by <a class="gh" href="https://github.com/idtheo" target="_blank" rel="noopener">idtheo</a> • <a class="x" href="https://x.com/usewuc" target="_blank" rel="noopener">@usewuc on X</a> ',
       back:"برگشت به دانلودها",
       btn:"English"
     };
@@ -354,7 +354,7 @@
       q3:"Is this page better than README?",
       a3:"This page is for cute UX & quick downloads; README is for docs and links.",
       ft:"V2Ray Clean Hub",
-      fs:"Made cute • Made simple • Made daily",
+      fs: 'Made by <a class="gh" href="https://github.com/idtheo" target="_blank" rel="noopener">idtheo</a> • <a class="x" href="https://x.com/usewuc" target="_blank" rel="noopener">@usewuc on X</a> ',
       back:"Back to downloads",
       btn:"فارسی"
     };
