--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       setText("t_q3", d.q3); setHTML("t_a3", d.a3);
 
       setText("t_ft", d.ft);
-      setText("t_fs", d.fs);
+      setHTML("t_fs", d.fs);
       setText("t_back", d.back);
 
       setText("langBtn", d.btn);
